Bug 162280 - crashtesting tdf105820-1.doc with --convert-to pdf
Summary: crashtesting tdf105820-1.doc with --convert-to pdf
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:25.2.0 target:24.8.0.3
Keywords:
Depends on:
Blocks: Font-Fallback
  Show dependency treegraph
 
Reported: 2024-07-31 07:06 UTC by Miklos Vajna
Modified: 2024-08-14 23:27 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Patch to trigger the problem reliably (1.04 KB, patch)
2024-07-31 07:06 UTC, Miklos Vajna
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Miklos Vajna 2024-07-31 07:06:22 UTC
Created attachment 195617 [details]
Patch to trigger the problem reliably

As noted in https://gerrit.libreoffice.org/c/core/+/170681, steps to reproduce the problem:

1) wget https://bugs.documentfoundation.org/attachment.cgi?id=130974 -O ~/Downloads/tdf105820-1.doc

2) ./instdir/program/soffice --headless --convert-to pdf ~/Downloads/tdf105820-1.doc

Crashes with an assertion failure in dbgutil builds.

It was not crashing for me initially as the crash depends on what fallbacks are used for Verdana, but the attached patch makes it reproducible here, assuming you have Noto Sans and Serif installed and Verdana is not.
Comment 1 Commit Notification 2024-07-31 14:57:05 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/ef1870810ec8c069e26538fd7626ad0656bed276

tdf#162280 vcl: consider font family type for glyph caching

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Commit Notification 2024-07-31 17:45:24 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/6b5f3ed531325c3d92f3e92b525f1a8534e5f631

tdf#162280 vcl: consider font family type for glyph caching

It will be available in 24.8.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2024-08-08 14:05:37 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-24-8-0":

https://git.libreoffice.org/core/commit/978497038f962e2464269a1daf1c4cef904e82b8

tdf#162280 vcl: consider font family type for glyph caching

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.